--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
-    <string name="app_name">Interview</string>
+    <string name="app_name">App Lover Interview</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_invalid_code">Invalid code</string>
     <string name="grant_permission">Grant a permission</string>
     <string name="missing_permission_header">Missing permission</string>
@@ -12,4 +10,7 @@
     <string name="login_screen_password_hint">Password</string>
     <string name="login_screen_title">Login</string>
     <string name="login_button_text">Login</string>
+    <string name="success">Success!</string>
+    <string name="error_invalid_email">Invalid email</string>
+    <string name="error_unknown">Ups... something wen wrong. Try again.</string>
 </resources>
